--- a/TechSolutions-program/Views/Seguimiento/Index.cshtml
+++ b/TechSolutions-program/Views/Seguimiento/Index.cshtml
@@ -58,4 +58,56 @@
 *@
 @model TechSolutions_program.Models.DashboardViewModel
 
-<h1>Dashboard de Control</h1>
+@{
+    ViewData["Title"] = "Dashboard";
+}
+
+<h1 class="h3">Dashboard de control</h1>
+
+<div class="row mt-4">
+    <div class="col-md-3 mb-3">
+        <div class="card text-bg-primary h-100">
+            <div class="card-body">
+                <h5 class="card-title">Proyectos</h5>
+                <p class="display-6 mb-0">@Model.TotalProyectos</p>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-3 mb-3">
+        <div class="card text-bg-success h-100">
+            <div class="card-body">
+                <h5 class="card-title">Presupuesto</h5>
+                <p class="display-6 mb-0">@Model.PresupuestoTotal.ToString("C2")</p>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-3 mb-3">
+        <div class="card text-bg-warning h-100">
+            <div class="card-body">
+                <h5 class="card-title">Pendientes</h5>
+                <p class="display-6 mb-0">@Model.TareasPendientes</p>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-3 mb-3">
+        <div class="card text-bg-info h-100">
+            <div class="card-body">
+                <h5 class="card-title">Completadas</h5>
+                <p class="display-6 mb-0">@Model.TareasCompletadas</p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="d-flex gap-2 mt-3">
+    <a asp-controller="Proyectos" asp-action="Index" class="btn btn-outline-primary">Ver proyectos</a>
+    @if (User.IsInRole("Lider"))
+    {
+        <a asp-controller="Tareas" asp-action="Index" class="btn btn-outline-info">Gestionar tareas</a>
+    }
+    @if (User.IsInRole("Desarrollador"))
+    {
+        <a asp-controller="Tareas" asp-action="MisTareas" class="btn btn-outline-info">Mis tareas</a>
+    }
+    <a asp-controller="Reportes" asp-action="Index" class="btn btn-outline-secondary">Reportes</a>
+</div>
