--- a/TechSolutions-program/Views/Autenticacion/AccessDenied.cshtml
+++ b/TechSolutions-program/Views/Autenticacion/AccessDenied.cshtml
@@ -1,3 +1,9 @@
-@model dynamic
+@{
+    ViewData["Title"] = "Acceso denegado";
+}
 
-<h1>Acceso denegado</h1>
+<div class="text-center mt-5">
+    <h1 class="h3">Acceso denegado</h1>
+    <p class="text-muted">No tienes permisos para acceder a esta sección.</p>
+    <a asp-controller="Home" asp-action="Index" class="btn btn-secondary">Volver al inicio</a>
+</div>
