--- a/TechSolutions-program/Views/Shared/_LoginPartial.cshtml
+++ b/TechSolutions-program/Views/Shared/_LoginPartial.cshtml
@@ -66,6 +66,7 @@
     </li>
     <li class="nav-item">
         <form class="form-inline" asp-area="" asp-controller="Autenticacion" asp-action="Logout" method="post">
+            @Html.AntiForgeryToken()
             <button type="submit" class="nav-link btn btn-link text-dark">Logout</button>
         </form>
     </li>
