--- a/TechSolutions-program/Views/Tareas/Delete.cshtml
+++ b/TechSolutions-program/Views/Tareas/Delete.cshtml
@@ -1,26 +1,29 @@
-@model TechSolutions_program.Models.Proyecto
+@model TechSolutions_program.Models.Tarea
 
 @{
-    ViewData["Title"] = "Eliminar proyecto";
+    ViewData["Title"] = "Eliminar tarea";
 }
 
-<h1 class="h3">Eliminar proyecto</h1>
+<h1 class="h3">Eliminar tarea</h1>
 
 <div class="alert alert-warning mt-3">
-    ¿Seguro que deseas eliminar este proyecto? Se eliminarán también sus tareas asociadas.
+    ¿Seguro que deseas eliminar esta tarea? Esta acción no se puede deshacer.
 </div>
 
 <div class="card">
     <div class="card-body">
         <dl class="row mb-0">
-            <dt class="col-sm-3">Proyecto</dt>
-            <dd class="col-sm-9">@Model.Nombre</dd>
-
-            <dt class="col-sm-3">Cliente</dt>
-            <dd class="col-sm-9">@Model.Cliente</dd>
+            <dt class="col-sm-3">Descripción</dt>
+            <dd class="col-sm-9">@Model.Descripcion</dd>
 
             <dt class="col-sm-3">Estado</dt>
             <dd class="col-sm-9">@Model.Estado</dd>
+
+            <dt class="col-sm-3">Prioridad</dt>
+            <dd class="col-sm-9">@Model.Prioridad</dd>
+
+            <dt class="col-sm-3">Proyecto</dt>
+            <dd class="col-sm-9">@Model.ProyectoId</dd>
         </dl>
     </div>
 </div>
@@ -32,3 +35,4 @@
         <a asp-action="Index" class="btn btn-secondary">Cancelar</a>
     </div>
 </form>
+
