--- a/TechSolutions-program/Views/Shared/_Layout.cshtml
+++ b/TechSolutions-program/Views/Shared/_Layout.cshtml
@@ -8,12 +8,15 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/TechSolutions_program.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Seguimiento" asp-action="Index">TechSolutions</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Seguimiento" asp-action="Index">
+                    <i class="bi bi-diagram-3-fill text-primary"></i> TechSolutions
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -23,27 +26,39 @@
                     {
                         <ul class="navbar-nav flex-grow-1">
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Seguimiento" asp-action="Index">Dashboard</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Seguimiento" asp-action="Index">
+                                    <i class="bi bi-speedometer2"></i> Dashboard
+                                </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Proyectos" asp-action="Index">Proyectos</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Proyectos" asp-action="Index">
+                                    <i class="bi bi-folder-fill"></i> Proyectos
+                                </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Clientes" asp-action="Index">Clientes</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Clientes" asp-action="Index">
+                                    <i class="bi bi-building"></i> Clientes
+                                </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Reportes" asp-action="Index">Reportes</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Reportes" asp-action="Index">
+                                    <i class="bi bi-file-earmark-bar-graph"></i> Reportes
+                                </a>
                             </li>
                             @if (User.IsInRole("Lider") || User.IsInRole("Administrador"))
                             {
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Tareas" asp-action="Index">Tareas</a>
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Tareas" asp-action="Index">
+                                        <i class="bi bi-list-task"></i> Tareas
+                                    </a>
                                 </li>
                             }
                             @if (User.IsInRole("Desarrollador"))
                             {
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Tareas" asp-action="MisTareas">Mis tareas</a>
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Tareas" asp-action="MisTareas">
+                                        <i class="bi bi-person-check-fill"></i> Mis tareas
+                                    </a>
                                 </li>
                             }
                         </ul>
@@ -55,6 +70,9 @@
     </header>
     <div class="container">
         <main role="main" class="pb-3">
+            @* Incluir notificaciones globales *@
+            <partial name="_Notifications" />
+            
             @RenderBody()
         </main>
     </div>
